# NLP_Project

./: README.md  alltexts.json  humarin_pipeline.ipynb  paradoteo_1c_2.ipynb  pegasus_pipeline.ipynb  pyproject.toml  sentences_reconstruction .ipynb  vamsi_pipeline.ipynb
