[project]
name = "nlp-project"
version = "0.1.0"
description = "Enter"
authors = [
    {name = "Enter"}
]
license = {text = "Enter"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "transformers (>=4.52.4,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (==1.24.4)",
    "pandas (==1.5.3)",
    "matplotlib (==3.7.1)",
    "seaborn (==0.12.2)",
    "nltk (==3.8.1)",
    "spacy (==3.7.2)",
    "gensim (==4.3.2)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "nlpaug (>=1.1.11,<2.0.0)",
    "parrot @ git+https://github.com/PrithivirajDamodaran/Parrot_Paraphraser.git",
    "protobuf (>=6.31.1,<7.0.0)",
    "language-tool-python (>=2.9.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
